fix modal width on mobile

--- a/src/Modal/Modal.scss
+++ b/src/Modal/Modal.scss
@@ -80,7 +80,6 @@
   padding: 20px;
   max-height: 70vh;
   overflow: auto;
-  max-width: 90vw;
 }
 
 .modalHeader {
